[gd_scene load_steps=3 format=3 uid="uid://options_menu_123456"]

[ext_resource type="PackedScene" uid="uid://starfield_bg_123456" path="res://scenes/shared/StarfieldBackground.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/menus/OptionsMenu.gd" id="2"]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 900.0
color = Color(0.05, 0.05, 0.15, 1)

[node name="StarfieldBackground" parent="." instance=ExtResource("1")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleContainer" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -350.0
offset_right = 150.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsTitle" type="Label" parent="UI/MainContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "OPTIONS"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeContainer" type="HBoxContainer" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="UI/MainContainer/OptionsContainer/VolumeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 24
text = "Master Volume:"

[node name="VolumeSlider" type="HSlider" parent="UI/MainContainer/OptionsContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="VolumeValueLabel" type="Label" parent="UI/MainContainer/OptionsContainer/VolumeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_font_sizes/font_size = 24
text = "80%"

[node name="Spacer1" type="Control" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="FullscreenContainer" type="HBoxContainer" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="UI/MainContainer/OptionsContainer/FullscreenContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 24
text = "Fullscreen:"

[node name="FullscreenCheckBox" type="CheckBox" parent="UI/MainContainer/OptionsContainer/FullscreenContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enable"

[node name="Spacer2" type="Control" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="DifficultyContainer" type="HBoxContainer" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="UI/MainContainer/OptionsContainer/DifficultyContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 24
text = "Difficulty:"

[node name="DifficultyOption" type="OptionButton" parent="UI/MainContainer/OptionsContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Normal"

[node name="Spacer3" type="Control" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ButtonContainer" type="HBoxContainer" parent="UI/MainContainer/OptionsContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/MainContainer/OptionsContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 50)
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="ButtonSpacer" type="Control" parent="UI/MainContainer/OptionsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="UI/MainContainer/OptionsContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 50)
theme_override_font_sizes/font_size = 20
text = "APPLY"

[connection signal="value_changed" from="UI/MainContainer/OptionsContainer/VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="UI/MainContainer/OptionsContainer/FullscreenContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="item_selected" from="UI/MainContainer/OptionsContainer/DifficultyContainer/DifficultyOption" to="." method="_on_difficulty_option_item_selected"]
[connection signal="pressed" from="UI/MainContainer/OptionsContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/MainContainer/OptionsContainer/ButtonContainer/ApplyButton" to="." method="_on_apply_button_pressed"]